Fix: top lightbox gallery alignment when item name is too long. Fix: columns count in galleries for different max-widths. Fix: prefix "www" to the local php files using Vite php plugin.

--- a/www/css/galleries.css
+++ b/www/css/galleries.css
@@ -24,20 +24,8 @@
     background-color: rgba(0,0,0,0.8);
     display: flex;
     align-items: center;
-    justify-content: center;
+    justify-content: normal;
 }
-
-/* .gallery-lightbox-content {
-    background-color: var(--color-dark-background);
-    margin: auto;
-    padding: 20px;
-    border: 1px solid #888;
-    width: 80%;
-    width: 100%;
-    max-width: 900px;
-    border-radius: 8px;
-    position: relative;
-} */
 
 .gallery-lightbox-content {
     width: 100%;
@@ -118,7 +106,7 @@
     display: flex;
     flex-direction: column;
     align-items: center;
-    justify-content: center;
+    justify-content: normal;
 }
 
 .resource-thumbnail {
@@ -204,9 +192,23 @@
     }
 }
 
+@media (max-width: 1600px) {
+    .resources-container {
+        grid-template-columns: repeat(7, 1fr); /* 2 columns for thumbnails */
+        gap: 10px;
+    }
+}
+
 @media (max-width: 1440px) {
     .resources-container {
         grid-template-columns: repeat(6, 1fr); /* 2 columns for thumbnails */
+        gap: 10px;
+    }
+}
+
+@media (max-width: 1280px) {
+    .resources-container {
+        grid-template-columns: repeat(5, 1fr); /* 2 columns for thumbnails */
         gap: 10px;
     }
 }
@@ -216,6 +218,18 @@
     .gallery-grid-container,
     .resources-grid-container {
         grid-template-columns: repeat(3, 1fr);
+    }
+
+    .resources-container {
+        grid-template-columns: repeat(4, 1fr); /* 2 columns for thumbnails */
+        gap: 10px;
+    }
+}
+
+@media (max-width: 800px) {
+    .resources-container {
+        grid-template-columns: repeat(3, 1fr); /* 2 columns for thumbnails */
+        gap: 10px;
     }
 }
 
